# challenge

./: .gitignore  README.md  default.nix  shell.nix
.github/: pull_request_template.md
docs/: PULL_REQUEST_TEMPLATE.md  index.html
nix/: generator.nix  nixpkgs.json  nixpkgs.nix
solution/: .gitignore  Api.hs  Main.hs  Model.hs  README.md  solution.cabal
