cabal-version:       >=1.10
name:                solution
version:             0.1.0.0
author:              Daniel Kirillov
maintainer:          dkinitiate@gmail.com
build-type:          Simple

executable solution
  build-depends:
    base                   >=4.12 && <4.13
    , aeson                >= 1.4.4 && < 1.5
    , bytestring           >= 0.10.8 && < 0.11
    , containers           >= 0.6.0 && < 0.7
    , text                 >= 1.2.3 && < 1.3
    , conduit              >= 1.3.1 && < 1.4
    , mtl                  >= 2.2.2 && < 2.3
    , stm                  >= 2.5.0 && < 2.6
    , process              >= 1.6.5 && < 1.7
    , servant              >= 0.16.2 && < 0.17
    , servant-server       >= 0.16.2 && < 0.17
    , warp                 >= 3.2.28 && < 3.3

  ghc-options:
    -Wall -O -threaded -rtsopts -with-rtsopts=-N

  default-language:
    Haskell2010

  main-is:
    Main.hs

  other-modules:
    Model
